--- a/index.html
+++ b/index.html
@@ -625,6 +625,10 @@
               <button data-filter-btn>Web development</button>
             </li>
 
+            <li class="filter-item">
+              <button data-filter-btn>Case Studies</button>
+            </li>
+
           </ul>
 
           <div class="filter-select-box">
@@ -655,6 +659,10 @@
 
               <li class="select-item">
                 <button data-select-item>Web development</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Case Studies</button>
               </li>
 
             </ul>
@@ -718,17 +726,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://www.behance.net/gallery/156731143/Modern-Furniture-Mobile-App-Design-UI" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/Application 1.jpg" alt="Furniture Shop UI" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Furniture Shop UI</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -790,17 +798,53 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://www.behance.net/gallery/158587131/Todo-App-Ui-Design" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/Application 2.jpg" alt="ToDo App UI" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">ToDo App UI</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+            
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://www.behance.net/gallery/156730905/Creative-Modern-UI-Design-of-Smart-home-Application" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Application 3.jpg" alt="Smart Home App UI" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Smart Home App UI</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://www.behance.net/gallery/157074715/Packages-Delivery-App-UI" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Application 4.jpg" alt="Packages Delivery App UI" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Packages Delivery App UI</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -825,6 +869,59 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="case studies">
+              <a href="https://www.behance.net/gallery/156291141/UX-Designer-Case-Study-for-Cafe-App" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Case Study 1.jpg" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Writer's Cafe</h3>
+
+                <p class="project-category">Case Studies</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="case studies">
+              <a href="https://www.behance.net/gallery/156288435/UX-Case-Study-for-Medicine-Reminder-App" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Case Study 2.jpg" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">MediPlus</h3>
+
+                <p class="project-category">Case Studies</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="case studies">
+              <a href="https://www.behance.net/gallery/156290327/UX-Case-Study-for-a-pet-adoption-Website-App" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Case Study 3.jpg" alt="arrival" loading="lazy" >
+                </figure>
+
+                <h3 class="project-title">PetJam</h3>
+
+                <p class="project-category">Case Studies</p>
+
+              </a>
+            </li>
           </ul>
 
         </section>
@@ -882,10 +979,6 @@
     </div>
 
   </main>
-
-
-
-
 
 
   <!--
