Portfolio - Web Design Update

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 
-<body>
-
   <!--
     - #MAIN
   -->
@@ -708,17 +706,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://www.behance.net/gallery/179294121/Minter-NFT-Portfolio-Landing-Page" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Minter.jpg" alt="Minter" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Minter</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -744,17 +742,17 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://www.behance.net/gallery/179930525/Cloud-Safe-SAAS-WEBSITE-LANDING-PAGE" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Cloudsafe.png" alt="Cloud Safe" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Cloud Safe</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -762,17 +760,35 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://www.behance.net/gallery/179836589/MyLegal-Legal-Firm-Landing-Page" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/Mylegal.jpg" alt="MyLegal" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">MyLegal</h3>
+
+                <p class="project-category">Web design</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web design">
+              <a href="https://www.behance.net/gallery/179764219/SUDS-SHOP-LANDING-PAGE-DESIGN" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Suds.jpg" alt="Suds Shop" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Suds Shop</h3>
 
                 <p class="project-category">Web design</p>
 
@@ -950,7 +966,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mailto:afridi.ux@gmail.com" class="form" data-form>
+          <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
