--- a/index.html
+++ b/index.html
@@ -194,17 +194,16 @@
 
         <section class="about-text">
           <p>
-            I'm a UI/UX Designer from Chennai, Tamil Nadu, working as freelancer. working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a UI/UX Designer from Chennai, Tamil Nadu, working as freelancer.
+            Turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
           <p>
-            My job is to design your website so that it is functional and user-friendly but at the same time attractive.
+            My job is to design your website & app so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
             add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
             across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            message and identity in the most creative way. I created web & app design for many famous brand companies.
           </p>
         </section>
 
@@ -384,6 +383,30 @@
               </p>
 
             </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">ProtoPie 101 Crash Course</h4>
+
+              <span>Valid from Aug 2023</span>
+
+              <p class="timeline-text">
+                Issued by ProtoPie School <a href="https://mycourse.app/Z4Nk8NMJhYd8iXeL6"> View Certificate </a>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Webflow 101 certification</h4>
+
+              <span>Valid from Sep 2023</span>
+
+              <p class="timeline-text">
+                Issued by Webflow <a href="https://webflow.com"> View Certificate </a>
+              </p>
+
+            </li>
           </ol>
 
         </section>
@@ -496,7 +519,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Visual Design</h5>
+                <h5 class="h5">Communication</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -509,12 +532,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Wireframing</h5>
-                <data value="70">70%</data>
+                <h5 class="h5">Critical Thinking</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
@@ -522,7 +545,20 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Prototyping</h5>
+                <h5 class="h5">collaboration/Teamwork</h5>
+                <data value="85">85%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Problem Solving</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -535,12 +571,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">User Research</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Receptiveness To Feedback</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
             </li>
@@ -548,7 +584,72 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">HTML & CSS</h5>
+                <h5 class="h5">Design Thinking</h5>
+                <data value="95">95%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 95%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">UX Research</h5>
+                <data value="85">85%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">UI Design</h5>
+                <data value="95">95%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 95%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Information Architecture</h5>
+                <data value="75">75%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 75%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Design Software Proficiency</h5>
+                <data value="95">95%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 95%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">HTML</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -561,12 +662,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Java Script</h5>
-                <data value="40">40%</data>
+                <h5 class="h5">CSS</h5>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
@@ -574,12 +675,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">React</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">JavaScript</h5>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
+                <div class="skill-progress-fill" style="width: 60%;"></div>
               </div>
 
             </li>
